remove warnings from chooser classes